Added ieee style midcurve llm paper

--- a/TalksPublications/MidcurveLLM_ICACCS2024/LaTeX/references.bib
+++ b/TalksPublications/MidcurveLLM_ICACCS2024/LaTeX/references.bib
@@ -17,8 +17,9 @@ author = {Panichev, Oleg and Voloshyna, Alona},
 title = {U-Net Based Convolutional Neural Network for Skeleton Extraction},
 booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) Workshops},
 month = {June},
-year = {2019}
+year = {2019},
 }
+
 
 
 @misc{shen2016object,
@@ -37,6 +38,24 @@ year = {2019}
       eprint={1811.12608},
       archivePrefix={arXiv},
       primaryClass={cs.CV}
+}
+
+@article{shen2021convolutional,
+  author = {Shen, Zhiyi and Zhou, Zhenyu and Zeng, Ying},
+  title = {A convolutional neural network-based skeleton extraction method for 3D shapes},
+  journal = {IEEE Transactions on Visualization and Computer Graphics},
+  volume = {27},
+  issue = {11},
+  pages = {3729--3739},
+  year = {2021},
+  month = {1},
+}
+
+@article{wang2023learningcontentflux,
+  author = {Wang, H. and Zhou, B. and Wang, C. and Liu, Y.},
+  title = {Learning content flux for skeletonization},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year = {2023},
 }
 
 @misc{zhao2018hifi,
@@ -172,7 +191,77 @@ year = {2019}
   doi={10.1504/IJCAET.2017.080772}
 }
 
+@unknown{DasSeg2019,
+author = {Das, Arindam and Kandan, Saranya and Yogamani, Senthil and Krizek, Pavel},
+year = {2019},
+month = {01},
+pages = {},
+title = {Design of Real-time Semantic Segmentation Decoder for Automated Driving}
+}
+
+@INPROCEEDINGS{midcurvenn2023,
+  author = {Kulkarni, Yogesh},
+  title = {MidcurveNN: Neural Network for Computing Midcurve of a Thin Polygon},
+  booktitle = {CAD Conference},
+  pages = {223-225},
+  year = {2023},
+  doi = {10.14733/cadconfP.2021.223-225},
+}
+
+@phdthesis{kulkarni2017,
+	author = {Kulkarni, Yogesh},
+	title = {Development of algorithms for generating connected midsurfaces using feature information in thin-walled parts},
+	year = {2017},
+	month = {Jan},
+	school = {College of Engineering Pune, India},
+}
+
+@ARTICLE{midcurvenn2022,
+  author = {Kulkarni, Yogesh and Pande, Suhas S. and Ravi, B.},
+  title = {MidcurveNN: Neural Network for Computing Midcurve of a Thin Polygon},
+  journal = {CAD Journal},
+  volume = {19},
+  issue = {6},
+  pages = {1154-1161},
+  year = {2022},
+  keywords = {Midcurve, Encoder-Decoder, Neural Network},
+  doi = {10.14733/cadaps.2022.1154-1161},
+  url = {https://www.cad-journal.net/files/vol\_19/CAD\_19(6)\_2022\_1154-1161.pdf},
+}
+
+@online{kulkarni2023geometry,
+  author = {Kulkarni, {Y. H.}},
+  title = {{Geometry, Graphs and {GPT}}},
+  journal = {Medium},
+  date = {2023-05-31},
+  url = {https://medium.com/technology-hits/geometry-graphs-and-gpt-2862d6d24866},
+}
+
+@misc{Kulkarni2023,
+    author = {Kulkarni, Yogesh H.},
+    title = {MidcurveNN: Encoder-Decoder Neural Network for Computing Midcurve of a Thin Polygon},
+    year = {2023},
+    month = {June 16},
+    howpublished = {ODSC India 2019},
+    note = {Retrieved December 8, 2023, from \url{https://confengine.com/conferences/odsc-india-2019/proposal/10090/midcurvenn-encoder-decoder-neural-network-for-computing-midcurve-of-a-thin-polygon}}
+}
 
 
+@misc{midcurvenngithub,
+  author = {Kulkarni, Yogesh H.},
+  title = {{MidcurveNN}},
+  url = {https://github.com/yogeshhk/MidcurveNN},
+  year = {2023},
+  accessed = {2023-12-08},
+}
 
+@article{fatemi2023talklikeagraph,
+  author = {Fatemi, Bahare and Halcrow, Jonathan and Bryan, Bryan},
+  title = {Talk like a Graph: Encoding Graphs for Large Language Models},
+  journal = {arXiv preprint arXiv:2310.04560},
+  year = {2023},
+  eprint = {2310.04560},
+  doi = {10.48550/arXiv.2310.04560},
+  url = {https://arxiv.org/abs/2310.04560},
+}
 
